assets/scss/base/_content.scss
/**
 * Base styling for content.
 * This is included in layout/_content.scss and zmd.scss
 */
p,
> a,
p a,
th,
td,
ul:not(.pagination),
ol:not(.summary-part) {
    line-height: 1.6;
}

h2,
h3 {
    margin-top: $length-48;
    line-height: 1.4;

    &,
    a {
        color: $accent-700;
        text-decoration: none;
    }

    a:hover,
    a:focus {
        text-decoration: underline;
    }
}

h2 {
    display: flex;
    align-items: center;

    margin-bottom: $length-20;
    padding: $length-6 $length-8;

    border-top: $length-1 solid $grey-100;

    background: $true-white;

    font-weight: 400;
    font-size: $font-size-6;

    a {
        flex: 2;
    }

    &.not-ready a {
        color: $grey-500;
    }

    .actions-title {
        margin: 0 $length-10;

        .btn {
            height: $length-32;

            margin-left: $length-4;

            background-color: $grey-100;
            color: $grey-600;

            font-size: $font-size-9;
            line-height: 2;

            z-index: 1;

            transition: color .1s ease-in-out,
                        background-color .1s ease-in-out;

            &.ico-after:after {
                margin-top: $length-8;
            }

            &:hover,
            &:focus {
                color: $grey-800;
                background-color: $grey-200;
                text-decoration: none;
            }
        }
    }
}

h3 {
    margin-bottom: $length-14;
    font-size: $font-size-7;

    &.not-ready a {
        color: $grey-500;
    }
}

h4 {
    margin-bottom: $length-12;
    font-size: $font-size-8;
}

h5 {
    margin-bottom: $length-10;
    font-size: $font-size-9;
}

h6 {
    margin-bottom: $length-10;
    font-size: $font-size-10;
}


.quizz .custom-block {
    .custom-block {
        display: none;
    }
    &.quizz-bad {
        background-color: $color-danger !important;
        .custom-block {
            display: block;
        }
    }
    &.quizz-good {
         background:$color-success !important;
        .custom-block {
            display: block;
        }
    }

}

.custom-block {
    margin: $length-24 0;
}
.custom-block-body {
    padding: $length-8 $length-16 $length-8 $length-48;

    &:after{
        position: absolute;
        top: 50%;
        left: 23px;
        margin: -11px 0 0 -11px;
        height: 22px;
        width: 22px;
    }
}
.custom-block-heading {
    padding: $length-4 $length-16;
    font-weight: bold;
}
.custom-block-information {
    background: $blue-000;

    .custom-block-heading {
        color: $white;
        background: $blue-400;
    }

    .custom-block-body {
        &:after {
            @include sprite-position($information);
        }

        a {
            color: $blue-500;

            &:hover {
                color: $blue-800;
            }
        }
    }
}
.custom-block-question {
    background: $purple-100;

    .custom-block-heading {
        color: $white;
        background: $purple-700;
    }

    .custom-block-body {
        &:after {
            @include sprite-position($question);
        }

        a {
            color: $purple-700;

            &:hover {
                color: $purple-900;
            }
        }
    }
}
.custom-block-error {
    background: $red-100;

    .custom-block-heading {
        color: $white;
        background: $red-500;
    }

    .custom-block-body {
        &:after {
            @include sprite-position($error);
        }

        a {
            color: $red-700;

            &:hover {
                color: $red-900;
            }
        }
    }
}
.custom-block-warning {
    background: $accent-100;

    .custom-block-heading {
        color: $white;
        background: $accent-800;
    }

    .custom-block-body {
        &:after {
            @include sprite-position($warning);
        }

        a {
            color: $accent-900;

            &:hover {
                color: $accent-800;
            }
        }
    }
}
.custom-block-neutral,
.custom-block-spoiler {
    background: $grey-100;

    .custom-block-heading {
        color: $white;
        background: $grey-600;
    }

    .custom-block-body {
        padding-left: $length-16;

        &:after {
            display: none;
        }
    }
}

.js .spoiler, .custom-block-spoiler {
    display: none;
}

.spoiler-title {
    display: block;

    margin: $length-16 0 0;
    padding: $length-4 $length-16 $length-4 $length-32;

    background: $grey-100;
    border-bottom: $length-1 solid $grey-200;

    font-size: $font-size-10;
    color: $grey-700;
    text-decoration: none;

    &.ico-after:after {
        margin: $length-8 0 0 $length-10;
    }

    &:nth-last-child(2) {
        margin-bottom: $length-16;
    }

    &:hover {
        text-decoration: underline;
    }
}

/* Old CSS for custom blocks, for compatibility */
:not(.alert-box){
    &.information,
    &.question,
    &.error,
    &.warning,
    &.spoiler {
        margin: $length-24 0;
        padding: $length-8 $length-14 $length-8 $length-48;

        &.ico-after:after {
            position: absolute;
            top: 50%;
            left: $length-16;
            margin: -$length-12 0 0 -$length-12;
            height: 22px;
            width: 22px;
        }
    }
    &.information {
        background: $blue-000;

        &.ico-after:after {
            @include sprite-position($information);
        }

        a {
            color: $blue-500;

            &:hover {
                color: $blue-800;
            }
        }
    }
    &.question {
        background: $purple-100;

        &.ico-after:after {
            @include sprite-position($question);
        }

        a {
            color: $purple-700;

            &:hover {
                color: $purple-900;
            }
        }
    }
    &.error {
        background: $red-100;

        &.ico-after:after {
            @include sprite-position($error);
        }

        a {
            color: $red-700;

            &:hover {
                color: $red-900;
            }
        }
    }
    &.warning {
        background: $accent-100;

        &.ico-after:after {
            @include sprite-position($warning);
        }

        a {
            color: $accent-900;

            &:hover {
                color: $accent-800;
            }
        }
    }
}

.spoiler,
.custom-block-spoiler {
    margin-top: 0;
    background: $grey-100;
}


img {
    max-width: 100%;
}

figure {
    margin: $length-32 0;
    text-align: center;
}

figure > {
    img,
    video,
    pre,
    code,
    table,
    blockquote,
    embed,
    video {
        max-width: 100%;
        margin: 0 auto;
        text-align: left;
    }

    img,
    video,
    pre,
    code {
        display: block;
    }

    figcaption {
        display: block;
    }

    blockquote ~ figcaption {
        padding: 0 0 $length-1 2%;
        font-style: italic;
        text-align: left;
        color: $grey-600;
        border-left: $length-6 solid $grey-200;

        p {
            margin: 0 0 $length-6;
        }

        &:before {
            content: "— ";
        }
    }
}

blockquote {
    margin: 0;
    color: $grey-700;
    padding: $length-1 2%;
    border-left: $length-6 solid $grey-200;

    & > p:first-child {
        margin-top: $length-6;
    }

    & > p:last-child {
        margin-bottom: $length-6;
    }

    figure {
        margin: $length-16 0;
    }

    &:last-child {
        margin-bottom: $length-16;
    }
}

code,
kbd,
pre,
samp {
    font-family: $font-monospace;
}

// code
@import "base/source-code";

// touche
kbd {
    padding: $length-2 $length-6;

    border: solid $length-1 $accent-200;
    border-bottom-width: $length-4;
    border-radius: $radius-1;

    background-color: $accent-000;

    color: $accent-900;
    text-shadow: 0 $length-1 0 $white;
}

// Code inline
p,
li,
td {
    code:not(.hljs) {
        --code-inline-color: #{$primary-900};
        --code-inline-background: #{$grey-100};

        color: var(--code-inline-color);
        background: var(--code-inline-background);
        border-radius: $radius-1;
        padding: 0 $length-6;
    }
}

// Code inline with colors adapted for the custom blocks
@mixin custom_block_code($block, $color, $background) {
    .custom-block-#{$block}, .#{$block}:not(.alert-box) {
        code:not(.hljs) {
            --code-inline-color: #{$color};
            --code-inline-background: #{$background};
        }
    }
}

@include custom_block_code("information", $blue-900, $blue-100);
@include custom_block_code("question", $purple-800, $purple-000);
@include custom_block_code("warning", $accent-900, $accent-000);
@include custom_block_code("error", $red-700, $red-000);

// @ping
.ping {
    color: inherit;
    text-decoration: none;

    &:hover,
    &:focus {
        text-decoration: underline;
    }

    .ping-username {
      font-weight: bold;
    }
}

.mathjax-wrapper {
    max-width: 100%;
    overflow: auto;

    mathjax {
        font-size: $length-16;
        font-size: $font-size-9;
    }
}

.footnote, .footnotes{
    opacity: .8;

    ol {
        padding-left: $length-24;

        p {
            display: inline;
        }

        .footnote-backref {
            margin-left: $length-4;
            text-decoration: none;
        }
    }
}

.video-container {
    // Center the video and set a maximum size
    margin: 0 auto;
    max-width: 560px;
    max-height: 315px;

    // Needed in case .video-container is wrapped with <div class="align-center"> or with <figure>
    text-align: left;

    // Adjust the video to fit the screen size
    .video-wrapper {
        position: relative;
        padding-bottom: 56.25%; // height / width * 100

        iframe {
            position: absolute;
            width: 100%;
            height: 100%;
        }
    }
}

.katex-display > .katex {
    display: contents;  /* overrides katex.css that creates display:inline-block and generate bad box */
}

.inlineMathDouble .katex {
    max-width: 100%;
    overflow-x: auto;
}

.iframe-wrapper {
    overflow-x: auto;
}

div.align-center {
    text-align: center;
}
div.align-right {
    text-align: right;
}
div.align-left, figure pre code.hljs {
    text-align: left;
}

// checkbox menu

ul li p {
    margin: 0;
}

li.task-list-item {
    list-style-type: none;
    position: relative;

    input[type=checkbox] {
        position: absolute;
        top: $length-2;
        left: -$length-24;

        background-color: $true-white !important;
    }
    &.quizz-forget {
        font-weight: bolder;
    }
}
.stat-graph ul.quizz-answers {
    max-width: 50%;
    li.quizz-stats {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 1px;
        .over-progress {
            display: block;
            position: relative;
            left: -50%;
        }
    }
}

.warn-typo {
    height: $length-20;
}

